Eevee don't respect active UVmap #65534

Closed
opened 2019-06-05 16:49:53 +02:00 by Lautaro Iglesias · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.16

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-02 21:33, hash: 19dcb22a88
Worked: (optional)

Short description of error
If you have an object with more than one UV map, Eevee will use the UV map that you have selected in the mesh properties, despite which one is the active one. This happen on viewport and render too.

wrong uv map.JPG
uv map.JPG

Exact steps for others to reproduce the error
Just check the diferent uv maps while rendering.

Bug_UVmap.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.16 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-02 21:33, hash: `19dcb22a88` Worked: (optional) **Short description of error** If you have an object with more than one UV map, Eevee will use the UV map that you have selected in the mesh properties, despite which one is the active one. This happen on viewport and render too. ![wrong uv map.JPG](https://archive.blender.org/developer/F7088437/wrong_uv_map.JPG) ![uv map.JPG](https://archive.blender.org/developer/F7088439/uv_map.JPG) **Exact steps for others to reproduce the error** Just check the diferent uv maps while rendering. [Bug_UVmap.blend](https://archive.blender.org/developer/F7088443/Bug_UVmap.blend)

Added subscriber: @LautaroIglesias

Added subscriber: @LautaroIglesias

#63450 was marked as duplicate of this issue

#63450 was marked as duplicate of this issue
Member

Added subscribers: @fclem, @JacquesLucke

Added subscribers: @fclem, @JacquesLucke
Member

@fclem, just replacing CustomData_get_active_layer with CustomData_get_render_layer seems to solve the issue for me. Unfortunately, I don't know the implications..

@fclem, just replacing `CustomData_get_active_layer` with `CustomData_get_render_layer` seems to solve the issue for me. Unfortunately, I don't know the implications..

Added subscriber: @brecht

Added subscriber: @brecht

@brecht I don't know what is the expected behavior.

@brecht I don't know what is the expected behavior.

For Eevee and Cycles, it should use the layer returned by CustomData_get_render_layer as the default UV map and vertex colors in materials, when no specific name is specified.

For overlays and texture color mode in workbench, CustomData_get_active_layer should be used so it shows the UV map that is currently being edited.

For Eevee and Cycles, it should use the layer returned by `CustomData_get_render_layer` as the default UV map and vertex colors in materials, when no specific name is specified. For overlays and texture color mode in workbench, `CustomData_get_active_layer` should be used so it shows the UV map that is currently being edited.

Added subscribers: @Walles, @ZedDB, @nacioss

Added subscribers: @Walles, @ZedDB, @nacioss

Hello, any news about this? Thanks.

Hello, any news about this? Thanks.
Clément Foucault was assigned by Jacques Lucke 2019-06-28 17:16:07 +02:00

Added subscriber: @ssendam

Added subscriber: @ssendam

This issue was referenced by 1715c396e4

This issue was referenced by 1715c396e450d41550e70c665211354c303a7275

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65534
No description provided.