Fix T65534 Eevee don't respect active UVmap