source/blender/draw/modes/shaders/paint_vertex_vert.glsl
@@ -1,6 +1,6 @@
 
 in vec3 pos;
-in vec3 c; /* active color */
+in vec3 ac; /* active color */
 
 out vec3 finalColor;
 
@@ -17,7 +17,7 @@ void main()
   vec3 world_pos = point_object_to_world(pos);
   gl_Position = point_world_to_ndc(world_pos);
 
-  finalColor = srgb_to_linear_attr(c);
+  finalColor = srgb_to_linear_attr(ac);
 
 #ifdef USE_WORLD_CLIP_PLANES
   world_clip_planes_calc_clip_distance(world_pos);
